# claude-enter

./: .gitignore  README.md  pyproject.toml  requirements.txt
claude_enter/: camera.py  gestures.py  keys.py  main.py  sounds.py  state_machine.py  tracker.py
docs/superpowers/plans/: 2026-06-11-gesture-control.md
docs/superpowers/specs/: 2026-06-11-gesture-control-design.md
tests/: test_gestures.py  test_state_machine.py
