[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-enter"
version = "0.1.0"
description = "用 Mac 前置摄像头手势控制终端里的 Claude Code"
requires-python = ">=3.11,<3.13"

[project.scripts]
claude-enter = "claude_enter.main:main"

[tool.setuptools]
packages = ["claude_enter"]
